aKregator ChangeLog
===================
(c) 2004 the aKregator authors.

NEXT VERSION:

#000025 FIX [x] fix path in m_html->begin( KURL( "file:/tmp/something.html" ) ) so that local images and css can be referenced from article preview   --> smt
#000043 ADD [x] download feed image specified for RSS (for #000036) --> smt
            [x] if the channel image size is well-sized, show in headers -->smt
#000019 ADD [x] implement tooltips and What's This? help -->berkus (enough of those for now)
#000044 ADD [x] show an error favicon if feed could not be fetched -->smt
#000037 ADD [x] add favicon support to the FeedsTree -->smt
        FIX [x] Fixed nasty bug with feed editing.
        FIX [x] aKregatorPart code cleanup.
        FIX [x] Zack Rusin: Fixes to Makefiles, code cleanup.
#000029 CHG [x] "Modify" should enable in-line edit for feed group items, standard dialog for feeds
#000003 ADD [x] sort ArticleList by Article::pubDate -->berkus
        CHG [x] add file filters to open/save dialogs
#000013 FIX [x] list generated files in .cvsignore files
#000006 ADD [x] system tray
#000038 ADD [x] add isOpen=<bool> to feed group outline opml -->berkus
#000039 FIX [x] make real use of LiveJournal checkboxes in AddFeedDialog
#000012 FIX [x] refine aboutbox
#000034 FIX [x] parse html entities in article titles
#000035 FIX [x] non-latin1 opml doesn't restore properly
        CHG [x] feeds list now stored using QDom classes
#000030 FIX [x] boolean vars are stored and retrieved improperly in opml
        CHG [x] use KPasswordEdit for ljPassword input
#000001 ADD [x] allow inline editing of feeds to alter Feed[Group]::title and resetting updateTitle to false (slotItemRenamed)
#000028 FIX [x] (librss + QDom) &amp;lt;b&amp;gt;test&lt;/b&gt; from RSS is parsed wrong - because, librss tries to do unescaping on entitites that QDom already unescaped -- solution: fixed librss
#000002 FIX [x] update ArticleList when selecting another feed