@@ -3,7 +3,7 @@ TODO-list for aKregator
 <nick>  = reported by
 -->nick = assigned to
 #x      = sequential bug number,
-          #000047 being the highest available (take this one for your next bug and increase here)
+          #000048 being the highest available (take this one for your next bug and increase here)
 Legend  =
 [ ] pending
 [-] unfixed (with reason)
@@ -15,9 +15,8 @@ ADD new feature
 
 == SHORT-TERM (URGENT) ==
 
+#000047 FIX [ ] Remembed feeds' favicons between runs -->smt
 #000042 FIX [ ] "File | Save" without previously selected filename doesn't work (doesn't call "Save As...") -->berkus
-#000041 FIX [ ] order for dateless items (right now they show in random order) -->berkus
-                order should be: ordered for items with dates, order same as in rss for items without dates.
 #000040 ADD [ ] finally, add some configuration options
                 [ ] default LiveJournal username and password (use KWallet)
                 [ ] last open opml file
